// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calendar year is 2021, and quarters start on January 1st 1`] = `
<div>
  <svg>
    <g
      class="gutter-interval-names"
    >
      <path
        d="M0,-462A462,462,0,0,1,235.006,-397.764A462,462,0,0,0,0,-462Z"
        id="gutter-interval-names-arcs-0"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-0"
          startOffset="25%"
          style="text-anchor:middle"
        >
          January
        </textpath>
      </text>
      <path
        d="M235.006,-397.764A462,462,0,0,1,392.615,-243.51A462,462,0,0,0,235.006,-397.764Z"
        id="gutter-interval-names-arcs-1"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-1"
          startOffset="25%"
          style="text-anchor:middle"
        >
          February
        </textpath>
      </text>
      <path
        d="M392.615,-243.51A462,462,0,0,1,461.886,-10.272A462,462,0,0,0,392.615,-243.51Z"
        id="gutter-interval-names-arcs-2"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-2"
          startOffset="25%"
          style="text-anchor:middle"
        >
          March
        </textpath>
      </text>
      <path
        d="M406.723,219.136A462,462,0,0,0,461.886,-10.272A462,462,0,0,1,406.723,219.136Z"
        id="gutter-interval-names-arcs-3"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-3"
          startOffset="25%"
          style="text-anchor:middle"
        >
          April
        </textpath>
      </text>
      <path
        d="M238.705,395.555A462,462,0,0,0,406.723,219.136A462,462,0,0,1,238.705,395.555Z"
        id="gutter-interval-names-arcs-4"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-4"
          startOffset="25%"
          style="text-anchor:middle"
        >
          May
        </textpath>
      </text>
      <path
        d="M12.259,461.837A462,462,0,0,0,238.705,395.555A462,462,0,0,1,12.259,461.837Z"
        id="gutter-interval-names-arcs-5"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-5"
          startOffset="25%"
          style="text-anchor:middle"
        >
          June
        </textpath>
      </text>
      <path
        d="M-224.368,403.86A462,462,0,0,0,12.259,461.837A462,462,0,0,1,-224.368,403.86Z"
        id="gutter-interval-names-arcs-6"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-6"
          startOffset="25%"
          style="text-anchor:middle"
        >
          July
        </textpath>
      </text>
      <path
        d="M-398.604,233.578A462,462,0,0,0,-224.368,403.86A462,462,0,0,1,-398.604,233.578Z"
        id="gutter-interval-names-arcs-7"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-7"
          startOffset="25%"
          style="text-anchor:middle"
        >
          August
        </textpath>
      </text>
      <path
        d="M-461.957,6.296A462,462,0,0,0,-398.604,233.578A462,462,0,0,1,-461.957,6.296Z"
        id="gutter-interval-names-arcs-8"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-8"
          startOffset="25%"
          style="text-anchor:middle"
        >
          September
        </textpath>
      </text>
      <path
        d="M-461.957,6.296A462,462,0,0,1,-400.765,-229.851A462,462,0,0,0,-461.957,6.296Z"
        id="gutter-interval-names-arcs-9"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-9"
          startOffset="25%"
          style="text-anchor:middle"
        >
          October
        </textpath>
      </text>
      <path
        d="M-400.765,-229.851A462,462,0,0,1,-235.006,-397.764A462,462,0,0,0,-400.765,-229.851Z"
        id="gutter-interval-names-arcs-10"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-10"
          startOffset="25%"
          style="text-anchor:middle"
        >
          November
        </textpath>
      </text>
      <path
        d="M-235.006,-397.764A462,462,0,0,1,0,-462A462,462,0,0,0,-235.006,-397.764Z"
        id="gutter-interval-names-arcs-11"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-11"
          startOffset="25%"
          style="text-anchor:middle"
        >
          December
        </textpath>
      </text>
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on July 1st 1`] = `
<div>
  <svg>
    <g
      class="gutter-interval-names"
    >
      <path
        d="M0,-462A462,462,0,0,1,235.006,-397.764A462,462,0,0,0,0,-462Z"
        id="gutter-interval-names-arcs-0"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-0"
          startOffset="25%"
          style="text-anchor:middle"
        >
          July
        </textpath>
      </text>
      <path
        d="M235.006,-397.764A462,462,0,0,1,404.662,-222.919A462,462,0,0,0,235.006,-397.764Z"
        id="gutter-interval-names-arcs-1"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-1"
          startOffset="25%"
          style="text-anchor:middle"
        >
          August
        </textpath>
      </text>
      <path
        d="M404.662,-222.919A462,462,0,0,1,461.961,5.965A462,462,0,0,0,404.662,-222.919Z"
        id="gutter-interval-names-arcs-2"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-2"
          startOffset="25%"
          style="text-anchor:middle"
        >
          September
        </textpath>
      </text>
      <path
        d="M394.525,240.405A462,462,0,0,0,461.961,5.965A462,462,0,0,1,394.525,240.405Z"
        id="gutter-interval-names-arcs-3"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-3"
          startOffset="25%"
          style="text-anchor:middle"
        >
          October
        </textpath>
      </text>
      <path
        d="M224.368,403.86A462,462,0,0,0,394.525,240.405A462,462,0,0,1,224.368,403.86Z"
        id="gutter-interval-names-arcs-4"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-4"
          startOffset="25%"
          style="text-anchor:middle"
        >
          November
        </textpath>
      </text>
      <path
        d="M-12.259,461.837A462,462,0,0,0,224.368,403.86A462,462,0,0,1,-12.259,461.837Z"
        id="gutter-interval-names-arcs-5"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-5"
          startOffset="25%"
          style="text-anchor:middle"
        >
          December
        </textpath>
      </text>
      <path
        d="M-245.478,391.388A462,462,0,0,0,-12.259,461.837A462,462,0,0,1,-245.478,391.388Z"
        id="gutter-interval-names-arcs-6"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-6"
          startOffset="25%"
          style="text-anchor:middle"
        >
          January
        </textpath>
      </text>
      <path
        d="M-398.939,233.006A462,462,0,0,0,-245.478,391.388A462,462,0,0,1,-398.939,233.006Z"
        id="gutter-interval-names-arcs-7"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-7"
          startOffset="25%"
          style="text-anchor:middle"
        >
          February
        </textpath>
      </text>
      <path
        d="M-461.996,-1.988A462,462,0,0,0,-398.939,233.006A462,462,0,0,1,-461.996,-1.988Z"
        id="gutter-interval-names-arcs-8"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-8"
          startOffset="25%"
          style="text-anchor:middle"
        >
          March
        </textpath>
      </text>
      <path
        d="M-461.996,-1.988A462,462,0,0,1,-400.765,-229.851A462,462,0,0,0,-461.996,-1.988Z"
        id="gutter-interval-names-arcs-9"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-9"
          startOffset="25%"
          style="text-anchor:middle"
        >
          April
        </textpath>
      </text>
      <path
        d="M-400.765,-229.851A462,462,0,0,1,-228.124,-401.75A462,462,0,0,0,-400.765,-229.851Z"
        id="gutter-interval-names-arcs-10"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-10"
          startOffset="25%"
          style="text-anchor:middle"
        >
          May
        </textpath>
      </text>
      <path
        d="M-228.124,-401.75A462,462,0,0,1,0,-462A462,462,0,0,0,-228.124,-401.75Z"
        id="gutter-interval-names-arcs-11"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-11"
          startOffset="25%"
          style="text-anchor:middle"
        >
          June
        </textpath>
      </text>
    </g>
  </svg>
</div>
`;
